--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   },
   "private": true,
   "dependencies": {
+    "moment": "2.23.0",
+    "web-animations-js": "2.3.1",
+    "angular-in-memory-web-api": "0.5.4",
+    "@angular/material-moment-adapter": "5.2.5",
     "@angular/animations": "^5.2.11",
     "@angular/cdk": "^5.2.0",
     "@angular/common": "^5.2.0",
@@ -23,10 +27,12 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "bootstrap": "^3.4.0",
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
